Add JSON endpoints to expose percentages (#9)
* Move datasources.default.db-type to application.properties so ./gradlew run works

* Add unauthenticated percentage controller

* Add types

* Java stream toList update

* put FeatureRepository back to public to remove warning

* whitespace

* Cleanup everything and set trransactional

* Add abstract test to make sure we clean up and disable excel tests for graal

* Switch to saveAll

* Remove debug